background color changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,8 @@ $small-width: 480px;
 body {
     margin: 0;
     font-family: "Inconsolata";
-    background-color: #FFFFDD;
+    background-color: #eab676;
+    //background-color: #3236a8;
     min-height: 100%;
 }
 a {
