--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -177,3 +177,5 @@ script_includes:
   </div>
   <!-- div.post-tail-wrapper -->
 </article>
+
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
